# subman

./: requirements-dev.txt  setup.cfg
.github/workflows/: publish.yml  tests.yml
cdedb/subman/: __init__.py  subman.py
cdedb/subman/tests/: test_basics.py
docs/: README.rst
subman/: __init__.py  machine.py  subman.py
tests/: test_basics.py
