[metadata]
name = subman
version = 0.1.0
author = Lars Esser, Maarten Grothus, Tobias Udtke
author_email =
maintainer =  CdE-Datenbank development team
maintainer_email = cdedb@lists.cde-ev.de
description = Powerful Python package to manage subscriptions.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
keywords = subscription, mailinglist, opt-out
url = https://github.com/cde-ev/subman
project_urls =
    Bug Tracker = https://github.com/cde-ev/subman/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = subman
python_requires = >=3.6

[options.package_data]
subman = py.typed
